polished michelson and landmasses

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -837,7 +837,8 @@ We specify that we would like to use a bar plot
 via the `geom_bar` function in `ggplot2`. 
 However, by default, `geom_bar` sets the heights
 of bars to the number of times a value appears in a data frame (its *count*); here, we want to plot exactly the values in the data frame, i.e.,
-the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom_bar`:
+the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom_bar`. The result is 
+shown in Figure \@ref(fig:03-data-islands-bar).
 \index{ggplot!geom\_bar}
 
 ```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.cap = "Bar plot of all Earth's landmasses' size with squished labels"}
@@ -846,8 +847,16 @@ islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
 islands_bar
 ```
 
-Alright, not bad! The plot in Figure \@ref(fig:03-data-islands-bar) is definitely the right kind of visualization, as we can clearly see and compare sizes of landmasses. The major issues are that the smaller landmasses' sizes are hard to distinguish, and the names of the landmasses are obscuring each other as they have been squished into too little space. But remember that the question we asked was only about the largest landmasses; let's make the plot a little bit clearer by keeping only the largest 12 landmasses. We do this using the `slice_max` function.
-Then to help us make sure the labels have enough space, we'll use horizontal bars instead of vertical ones. We do this by swapping the `x` and `y` variables:
+Alright, not bad! The plot in Figure \@ref(fig:03-data-islands-bar) is
+definitely the right kind of visualization, as we can clearly see and compare
+sizes of landmasses. The major issues are that the smaller landmasses' sizes
+are hard to distinguish, and the names of the landmasses are obscuring each
+other as they have been squished into too little space. But remember that the
+question we asked was only about the largest landmasses; let's make the plot a
+little bit clearer by keeping only the largest 12 landmasses. We do this using
+the `slice_max` function.  Then to help us make sure the labels have enough
+space, we'll use horizontal bars instead of vertical ones. We do this by
+swapping the `x` and `y` variables:
 \index{slice\_max}
 
 ```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE, fig.cap = "Bar plot of size for Earth's largest 12 landmasses"}
@@ -871,24 +880,26 @@ and set it to `landmass_type`.
 To organize the landmasses by their `size` variable, 
 we will use the `tidyverse` `fct_reorder` function
 in the aesthetic mapping to organize the landmasses by their `size` variable.
-The first argument passed to `fct_reorder` is the factor column's name, 
-whose levels we would like to reorder (here `landmass`). 
-The second argument passed is the column name 
-that holds the values we would like to use to do the ordering (here `size`).
-`fct_reorder` orders by that column in ascending order by default, 
-but this can be changed to sorting in descending order 
+The first argument passed to `fct_reorder` is the name of the factor column
+whose levels we would like to reorder (here, `landmass`). 
+The second argument is the column name 
+that holds the values we would like to use to do the ordering (here, `size`).
+The `fct_reorder` function uses ascending order by default, 
+but this can be changed to descending order 
 by setting  `.desc = TRUE`.
 We do this here so that the largest bar will closest to the axis line,
 which is more visually appealing.
 
-To label the x and y axes, we shift from using `xlab` and `ylab`, 
-to specifying these within the `labs` function. 
-We do this here because we would also like to change the legend label.
-The default label is the column name of the column being mapped to `fill`,
+To label the x and y axes, we will use the `labs` function
+instead of the `xlab` and `ylab` functions from earlier in this chapter. 
+The `labs` function is more general; we are using it in this case because 
+ we would also like to change the legend label.
+The default label is the name of the column being mapped to `fill`. Here that
+would be `landmass_type`;
 however `landmass_type` is not proper English (and so is less readable).
-Thus we use the `fill` argument inside `labs` to change that to "Type".
+Thus we use the `fill` argument inside `labs` to change that to "Type."
 Finally, we again \index{ggplot!reorder} use the `theme` function 
-to change the font size:
+to change the font size.
 
 ```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width = 8, fig.cap = "Bar plot of size for Earth's largest 12 landmasses colored by whether its a continent with clearer axes and labels"}
 islands_bar <- ggplot(islands_top12, 
@@ -901,8 +912,10 @@ islands_bar <- ggplot(islands_top12,
 islands_bar
 ```
 
-The plot in Figure \@ref(fig:03-data-islands-bar-4) is now a very effective visualization for answering our original questions. Landmasses are organized by their size,
-and continents are colored differently than other landmasses, making it quite clear that continents are the largest seven landmasses.
+The plot in Figure \@ref(fig:03-data-islands-bar-4) is now a very effective
+visualization for answering our original questions. Landmasses are organized by
+their size, and continents are colored differently than other landmasses,
+making it quite clear that continents are the largest seven landmasses.
 
 ### Histograms: the Michelson speed of light data set
 The `morley` data set \index{Michelson speed of light} 
@@ -912,19 +925,17 @@ Five experiments were performed,
 and in each experiment, 20 runs were performed&mdash;meaning that 
 20 measurements of the speed of light were collected 
 in each experiment [@lightdata].
-
 The `morley` data set is available in base R as a data frame,
 so it does not need to be loaded.
-We convert it to a tibble to take advantage of the nicer print output 
-these specialized data frames provide.
 Because the speed of light is a very large number 
-(the true value is 299,792.458 km/sec) the data is coded
+(the true value is 299,792.458 km/sec), the data is coded
 to be the measured speed of light minus 299,000.
-Doing this allows us to explore the variability in the measurements 
-collected on the speed of light. 
-If we were to focus on the entire large number, 
-these smaller differences would become not noticeable, 
-even though in this case, they are quite important. 
+This coding allows us to focus on the variations in the measurements, which are generally
+much smaller than 299,000.
+If we used the full large speed measurements, the variations in the measurements
+would not be noticeable, making it difficult to study the differences between the experiments.
+Note that we convert the `morley` data to a tibble to take advantage of the nicer print output 
+these specialized data frames provide.
 
 **Question:** \index{question!visualization} Given what we know now about the speed of 
 light (299,792.458 kilometres per second), how accurate were each of the experiments?
@@ -950,7 +961,8 @@ by separating the data into bins,
 and then using vertical bars to show how many data points fell in each bin. 
 
 To create a histogram in `ggplot2` we will use the `geom_histogram` geometric
-object, setting the `x` axis to the `Speed` measurement variable; and as we did before, let's use the default arguments just to see how things look:
+object, setting the `x` axis to the `Speed` measurement variable. As usual, 
+let's use the default arguments just to see how things look.
 
 ```{r 03-data-morley-hist, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data"}
 morley_hist <- ggplot(morley, aes(x = Speed)) +
@@ -963,13 +975,14 @@ However,
 we cannot tell how accurate the measurements are using this visualization 
 unless we can see the true value.
 In order to visualize the true speed of light, 
-we will add a vertical line with the `geom_vline` function
-\index{ggplot!geom\_vline}.
-To draw a vertical line with `geom_vline`, 
+we will add a vertical line with the `geom_vline` function.
+To draw a vertical line with `geom_vline`,  \index{ggplot!geom\_vline}
 we need to specify where on the x-axis the line should be drawn. 
 We can do this by setting the `xintercept` argument. 
-Here we set it to the true value of light speed minus 299, 000 (so it is coded the same way as the measurements in the `morley` data frame): 792.458. 
-We also would like to fine tune this vertical line, 
+Here we set it to 792.458, which is the true value of light speed 
+minus 299,000; this ensures it is coded the same way as the 
+measurements in the `morley` data frame.
+We would also like to fine tune this vertical line, 
 styling it so that it is dashed and 1 point in thickness.
 A point is a measurement unit commonly used with font, 
 and 1 point is about 0.353 mm. 
@@ -1006,7 +1019,7 @@ We also specify `position = "identity"` in `geom_histogram` to ensure
 the histograms for each experiment will be overlaid side-by-side, 
 instead of stacked bars 
 (which is the default for bar plots or histograms 
-when they are colored by another categorical variable):
+when they are colored by another categorical variable).
 
 ```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment"}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
@@ -1015,7 +1028,20 @@ morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
 morley_hist
 ```
 
-Wait a second; the histogram is still all the same color! What is going on here? If we look at the printed `morley` data, the column `Expt` is an integer (we see the label `<int>` underneath the `Expt` column name). But we want to treat it as a categorical variable.  To fix this issue we can write `as_factor(Expt)` in the `fill` aesthetic mapping. Recall that factors are a special categorical type of variable in R that are often used for class label data. By writing `as_factor(Expt)` we are ensuring that R will treat this variable as a factor, and the color will be mapped discretely.
+Alright great, Figure \@ref(03-data-morley-hist-3) looks...wait a second! The
+histogram is still all the same color! What is going on here? Well, if you 
+recall from Chapter \@ref(wrangling), the *data type* you use for each variable
+can influence how R and `tidyverse` treats it. Here, we indeed have an issue
+with the data types in the `morley` data frame. In particular, the `Expt` column
+is currently an *integer* (you can see the label `<int>` underneath the `Expt` column in \index{integer} the printed
+data frame at the start of this section). But we want to treat it as a
+*category*, i.e., there should be one category per type of experiment.  
+To fix this issue we can convert the `Expt` variable into a *factor* by \index{factor}
+passing it to `as_factor` in the `fill` aesthetic mapping.
+Recall that factor is a data type in R that is often used to represent
+categories. By writing
+`as_factor(Expt)` we are ensuring that R will treat this variable as a factor,
+and the color will be mapped discretely.
 \index{factor!usage in ggplot}
 
 ```{r 03-data-morley-hist-with-factor, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment as factor"}
@@ -1026,12 +1052,19 @@ morley_hist
 ```
 
 > Factors impact plots in two ways:
-(1) ensuring a color is mapped as discretely where appropriate (like in this example) and (2) the ordering of levels in a plot. `ggplot` takes into account the order of the factor levels as opposed to the order that is displayed in your data frame. Learning how to reorder your factor levels will help you with reordering the labels of a factor on a plot.  
+(1) ensuring a color is mapped as discretely where appropriate (like in this
+example) and (2) the ordering of levels in a plot. `ggplot` takes into account
+the order of the factor levels as opposed to the order that is displayed in
+your data frame. Learning how to reorder your factor levels will help you with
+reordering the labels of a factor on a plot.  
  
-Unfortunately, the attempt to separate out the experiment number visually has created a bit of a mess. All of the colors in Figure \@ref(fig:03-data-morley-hist-3)
-are blending together, and although it is possible to derive *some* insight from this (e.g., experiments 1 and 3 had some 
-of the most incorrect measurements), it isn't the clearest way to convey our message and answer the question. Let's try a different strategy of 
-creating multiple separate histograms on top of one another. 
+Unfortunately, the attempt to separate out the experiment number visually has
+created a bit of a mess. All of the colors in Figure
+\@ref(fig:03-data-morley-hist-3) are blending together, and although it is
+possible to derive *some* insight from this (e.g., experiments 1 and 3 had some
+of the most incorrect measurements), it isn't the clearest way to convey our
+message and answer the question. Let's try a different strategy of creating
+multiple separate histogram plots arranged in a grid.
 
 In order to create a plot in `ggplot2` 
 that has multiple subplots arranged in a grid, 
@@ -1090,28 +1123,36 @@ admirable job given the technology available at the time.
 #### Choosing a binwidth for histograms {-}
 
 When you create a histogram in R, the default number of bins used is 30.
-Is this the number you should always use? The answer here is no.
-The right number of bins really depends on 
-what makes sense for the problem you're working on.
-It should help you answer the question you are asking.
-Setting the number of bins is possible 
-via the `bins` argument in `geom_histogram`, 
-however the number of bins depends on both the question you are asking 
-as well as the number of observations you have in your data.
-Instead of choosing the number of bins, 
-we suggest you choose the bin width that makes sense for your problem.
-This can be set via the `binwidth` argument in `geom_histogram`.
+Naturally, this is not always the right number to use.
+You can set the number of bins yourself by using
+the `bins` argument in the `geom_histogram` geometric object.
+You can also set the *width* of the bins using the
+`binwidth` argument in the `geom_histogram` geometric object.
+But what number of bins, or bin width, is the right one to use? 
 
-Choosing the correct bin width for your problem 
+Unfortunately there is no hard rule for what the right bin number
+or width is. It depends entirely on your problem; the *right* number of bins 
+or bin width is 
+the one that *helps you answer the question* you asked. 
+Choosing the correct setting for your problem 
 is something that commonly takes iteration.
-It's usually a good idea to try out several bin widths.
-Let's do that here for the histogram we have been working on.
+We recommend setting the *bin width* (not the *number of bins*) because
+it often more directly corresponds to values in your problem of interest. For example,
+if you are looking at a histogram of human heights,
+a bin width of 1 inch would likely be reasonable, while the number of bins to use is 
+not immediately clear.
+It's usually a good idea to try out several bin widths to see which one
+most clearly captures your data in the context of the question
+you want to answer.
+
+To get a sense for how different bin widths affect visualizations, 
+let's experiment with the histogram that we have been working on in this section.
 In Figure \@ref(fig:03-data-morley-hist-binwidth),
-we compare the default number of bins with three histograms where we set the 
-`binwidth` in `geom_histogram` to 0.001, 0.01 and 0.1.
-In this case, we can see that in this case, both the default number of bins 
+we compare the default setting with three other histograms where we set the 
+`binwidth` to 0.001, 0.01 and 0.1.
+In this case, we can see that both the default number of bins 
 and the binwidth of 0.01 are effective for helping answer our question.
-Whereas the bin widths of 0.001 and 0.1 are too small and too big, respectively.
+On the other hand, the bin widths of 0.001 and 0.1 are too small and too big, respectively.
 
 ```{r 03-data-morley-hist-binwidth, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 10, fig.cap = "Effect of varying bin width on histograms."}
 morley_hist_default <- ggplot(morley_rel, aes(x = relative_accuracy, fill = as_factor(Expt))) +
@@ -1159,12 +1200,10 @@ What if we want to add onto a `ggplot` plot object later in our analysis?
 Do we need to copy and paste the code we wrote previously 
 and then add on our new layers after that? No! 
 If we stored our `ggplot` plot as a named object
-using the assignment symbol (`<-`), we can call it 
-and add to it using the `+` operator.
-For example, if we wanted to add a title to the last plot we created, 
-named `morley_rel`, we can call the name of that plot, then the `+` operator, 
-and then add our code to create a title for the plot 
-(using the `ggtitle` function):
+using the assignment symbol (`<-`), we can 
+add to it using the `+` operator.
+For example, if we wanted to add a title to the last plot we created (`morley_hist`), 
+we can use the `+` operator to add a title layer with the `ggtitle` function.
 
 ```{r 03-data-morley-hist-addlayer, warning = FALSE, message = FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with a descriptive title highlighting the take home message of the visualization."}
 morley_hist_title <- morley_hist +
@@ -1172,10 +1211,8 @@ morley_hist_title <- morley_hist +
 morley_hist_title
 ```
 
-> **Note:** 
-> Good data visualizations titles clearly communicate 
-> the take home message to the audience. 
-> Typically, 
+> **Note:** Good visualization titles clearly communicate 
+> the take home message to the audience. Typically, 
 > that is the answer to the question you posed before making the visualization.
 
 ## Explaining the visualization
