finished viz polish

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1207,7 +1207,7 @@ we can use the `+` operator to add a title layer with the `ggtitle` function.
 
 ```{r 03-data-morley-hist-addlayer, warning = FALSE, message = FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with a descriptive title highlighting the take home message of the visualization."}
 morley_hist_title <- morley_hist +
-  ggtitle("Morley's speed of light experiments \n were accurate to about 0.05%")
+  ggtitle("Michelson's speed of light experiments \n were accurate to about 0.05%")
 morley_hist_title
 ```
 
@@ -1218,13 +1218,17 @@ morley_hist_title
 ## Explaining the visualization
 #### *Tell a story* {-}
 
-Typically, your visualization will not be shown entirely on its own, but rather it will be part of a larger presentation.
-Further, visualizations can provide supporting information for any aspect of a presentation, from opening to conclusion.
-For example, you could use an exploratory visualization in the opening of the presentation to motivate your choice
-of a more detailed data analysis / model, a visualization of the results of your analysis to show what your analysis has uncovered,
-or even one at the end of a presentation to help suggest directions for future work. 
+Typically, your visualization will not be shown entirely on its own, but rather
+it will be part of a larger presentation.  Further, visualizations can provide
+supporting information for any aspect of a presentation, from opening to
+conclusion.  For example, you could use an exploratory visualization in the
+opening of the presentation to motivate your choice of a more detailed data
+analysis / model, a visualization of the results of your analysis to show what
+your analysis has uncovered, or even one at the end of a presentation to help
+suggest directions for future work. 
 
-Regardless of where it appears, a good way to discuss your visualization is as a story\index{visualization!explanation}:
+Regardless of where it appears, a good way to discuss your visualization \index{visualization!explanation} is as
+a story: 
 
 1) Establish the setting and scope, and motivate why you did what you did. 
 2) Pose the question that your visualization answers. Justify why the question is important to answer.
@@ -1241,35 +1245,58 @@ Regardless of where it appears, a good way to discuss your visualization is as a
 Below are two examples of how one might take these four steps in describing the example visualizations that appeared earlier in this chapter.
 Each of the steps is denoted by its numeral in parentheses, e.g. (3).
 
-**Mauna Loa Atmospheric CO$_{\text{2}}$ Measurements:** (1) \index{Mauna Loa CO2} Many current forms of energy generation and conversion---from automotive engines to natural gas power plants---rely on burning
-fossil fuels and produce greenhouse gases, typically primarily carbon dioxide (CO$_{\text{2}}$), as a byproduct. Too much of these gases in the Earth's atmosphere will cause it to trap
-more heat from the sun, leading to global warming. (2) In order to assess how quickly the atmospheric concentration of CO$_{\text{2}}$ is increasing over time, we (3) used a data set from
-the Mauna Loa observatory from Hawaii, consisting of CO$_{\text{2}}$ measurements from 1980 to 2020. We plotted the measured concentration of CO$_{\text{2}}$ (on the vertical axis) over time
-(on the horizontal axis). From this plot, you can see a clear, increasing, and generally linear trend over time. There is also a periodic oscillation that occurs once per year and
-aligns with Hawaii's seasons, with an amplitude that is small relative to the growth in the overall trend. This shows that atmospheric CO$_{\text{2}}$ is clearly increasing over 
-time, and (4) it is perhaps worth investigating more into the causes.
+**Mauna Loa Atmospheric CO$_{\text{2}}$ Measurements:** (1) \index{Mauna Loa CO2} Many 
+current forms of energy generation and conversion---from automotive
+engines to natural gas power plants---rely on burning fossil fuels and produce
+greenhouse gases, typically primarily carbon dioxide (CO$_{\text{2}}$), as a
+byproduct. Too much of these gases in the Earth's atmosphere will cause it to
+trap more heat from the sun, leading to global warming. (2) In order to assess
+how quickly the atmospheric concentration of CO$_{\text{2}}$ is increasing over
+time, we (3) used a data set from the Mauna Loa observatory from Hawaii,
+consisting of CO$_{\text{2}}$ measurements from 1980 to 2020. We plotted the
+measured concentration of CO$_{\text{2}}$ (on the vertical axis) over time (on
+the horizontal axis). From this plot, you can see a clear, increasing, and
+generally linear trend over time. There is also a periodic oscillation that
+occurs once per year and aligns with Hawaii's seasons, with an amplitude that
+is small relative to the growth in the overall trend. This shows that
+atmospheric CO$_{\text{2}}$ is clearly increasing over time, and (4) it is
+perhaps worth investigating more into the causes.
 
-**Michelson Light Speed Experiments:** (1) \index{Michelson speed of light} Our modern understanding of the physics of light has advanced significantly from the 
-late 1800s when Michelson and Morley's experiments first demonstrated that it had a finite speed. We now know based on modern experiments that it 
-moves at roughly 299792.458 kilometres per second. (2) But how accurately were we first able to measure this fundamental physical constant, and did certain
-experiments produce more accurate results than others?
-(3) To better understand this we plotted data from 5 experiments by Michelson in 1879, each with 20 trials, as histograms stacked on top of one another.
-The horizontal axis shows the accuracy of the measurements relative to the true speed of light as we know it today, expressed as a percentage.
-From this visualization, you can see that most results had relative errors of at most 0.05%. You can also see that experiments 1 and 3 had
-measurements that were the farthest from the true value, and experiment 5 tended to provide the most consistently accurate result. (4) It would be
-worth further investigating the differences between these experiments to see why they produced different results.
+**Michelson Light Speed Experiments:** (1) \index{Michelson speed of light} Our
+modern understanding of the physics of light has advanced significantly from
+the late 1800s when Michelson and Morley's experiments first demonstrated that
+it had a finite speed. We now know based on modern experiments that it moves at
+roughly 299,792.458 kilometres per second. (2) But how accurately were we first
+able to measure this fundamental physical constant, and did certain experiments
+produce more accurate results than others?  (3) To better understand this we
+plotted data from 5 experiments by Michelson in 1879, each with 20 trials, as
+histograms stacked on top of one another.  The horizontal axis shows the
+accuracy of the measurements relative to the true speed of light as we know it
+today, expressed as a percentage.  From this visualization, you can see that
+most results had relative errors of at most 0.05%. You can also see that
+experiments 1 and 3 had measurements that were the farthest from the true
+value, and experiment 5 tended to provide the most consistently accurate
+result. (4) It would be worth further investigating the differences between
+these experiments to see why they produced different results.
 
 ## Saving the visualization
 #### *Choose the right output format for your needs* {-}
 
-Just as there are many ways to store data sets, there are many ways to store visualizations and images.
-Which one you choose can depend on several factors, such as file size/type limitations 
-(e.g., if you are submitting your visualization as part of a conference paper or to a poster printing shop)
-and where it will be displayed (e.g., online, in a paper, on a poster, on a billboard, in talk slides).
-Generally speaking, images come in two flavours: *bitmap* (or *raster*) \index{bitmap|see{raster graphics}}\index{raster graphics} formats and *vector* (or *scalable graphics*) \index{vector graphics} formats.
+Just as there are many ways to store data sets, there are many ways to store
+visualizations and images.  Which one you choose can depend on several factors,
+such as file size/type limitations (e.g., if you are submitting your
+visualization as part of a conference paper or to a poster printing shop) and
+where it will be displayed (e.g., online, in a paper, on a poster, on a
+billboard, in talk slides).  Generally speaking, images come in two flavours:
+*raster* \index{bitmap|see{raster graphics}}\index{raster graphics} formats 
+and *vector* \index{vector graphics} formats.
 
-
-**Bitmap / Raster** images are represented as a 2-D grid of square pixels, each with its own color. Raster images are often *compressed* before storing so they take up less space. A compressed format is *lossy* if the image cannot be perfectly recreated when loading and displaying, with the hope that the change is not noticeable. *Lossless* formats, on the other hand, allow a perfect display of the original image.
+**Raster** images are represented as a 2-D grid of square pixels, each
+with its own color. Raster images are often *compressed* before storing so they
+take up less space. A compressed format is *lossy* if the image cannot be
+perfectly recreated when loading and displaying, with the hope that the change
+is not noticeable. *Lossless* formats, on the other hand, allow a perfect
+display of the original image.
 \index{raster graphics!file types}
 
 - *Common file types:* 
@@ -1279,7 +1306,9 @@ Generally speaking, images come in two flavours: *bitmap* (or *raster*) \index{b
     - [TIFF](https://en.wikipedia.org/wiki/TIFF) (`.tif`, `.tiff`): typically lossless, no compression, used mostly in graphic arts, publishing
 - *Open-source software:* [GIMP](https://www.gimp.org/)
 
-**Vector / Scalable Graphics** images are represented as a collection of mathematical objects (lines, surfaces, shapes, curves). When the computer displays the image, it redraws all of the elements using their mathematical formulas.
+**Vector** images are represented as a collection of mathematical 
+objects (lines, surfaces, shapes, curves). When the computer displays the image, it 
+redraws all of the elements using their mathematical formulas.
 \index{vector graphics!file types}
 
 - *Common file types:* 
@@ -1287,23 +1316,27 @@ Generally speaking, images come in two flavours: *bitmap* (or *raster*) \index{b
     - [EPS](https://en.wikipedia.org/wiki/Encapsulated_PostScript) (`.eps`), general-purpose use (rarely used)
 - *Open-source software:* [Inkscape](https://inkscape.org/)
 
-Raster and vector images have opposing advantages and disadvantages. A raster image of a fixed width / height takes the same amount of space and time to load regardless of 
-what the image shows (caveat: the compression algorithms may shrink the image more or run faster for certain images). A vector image takes space and time to load 
-corresponding to how complex the image is, since the computer has to draw all the elements each time it is displayed. For example, if you have a scatter plot with 1 million
-points stored as an SVG file, it may take your computer some time to open the image. On the other hand, you can zoom into / scale up 
-vector graphics as much as you like without the image looking bad, while raster images eventually start to look "pixellated." 
+Raster and vector images have opposing advantages and disadvantages. A raster
+image of a fixed width / height takes the same amount of space and time to load
+regardless of what the image shows (the one caveat is that the compression algorithms may
+shrink the image more or run faster for certain images). A vector image takes
+space and time to load corresponding to how complex the image is, since the
+computer has to draw all the elements each time it is displayed. For example,
+if you have a scatter plot with 1 million points stored as an SVG file, it may
+take your computer some time to open the image. On the other hand, you can zoom
+into / scale up vector graphics as much as you like without the image looking
+bad, while raster images eventually start to look "pixellated." 
 
 > **PDF files:** 
 > The portable document format [PDF](https://en.wikipedia.org/wiki/PDF) (`.pdf`) is commonly used to
-> store *both* raster and vector graphics formats. If you try to open a PDF and it's taking a long time
+> store *both* raster and vector formats. If you try to open a PDF and it's taking a long time
 > to load, it may be because there is a complicated vector graphics image that your computer is rendering. 
 \index{PDF}
 \index{portable document format|see{PDF}}
 
 Let's learn how to save plot images to these different file formats using a 
-scatter plot of the 
-[Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) 
-[@faithfuldata].
+scatter plot of 
+the [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) [@faithfuldata].
 
 ```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time"}
 library(svglite) # we need this to save SVG files
@@ -1318,11 +1351,11 @@ faithful_plot
 Now that we have a named `ggplot` plot object, we can use the `ggsave` function
 to save a file containing this image. 
 `ggsave` works by taking a file name to create for the image 
-as it's first argument. 
+as its first argument. 
 This can include the path to the directory where you would like to save the file 
 (e.g., `img/filename.png` to save a file named `filename` to the `img` directory),
-and the name of the plot object to save as it's second argument.
-The kind of image to save is specified by the file name's file extension.
+and the name of the plot object to save as its second argument.
+The kind of image to save is specified by the file extension.
 For example, 
 to create a PNG image file we specify that the file extension is `.png`.
 Below we demonstrate how to save PNG, JPG, BMP, TIFF and SVG file types 
@@ -1352,8 +1385,7 @@ kable(file_sizes,
       caption = "File sizes of `faithful_plot` when saved as different file formats.")
 ```
 
-The different file types are not only different in their properties 
-(outlined above), but also in their file sizes (Table \@ref(tab:filesizes)).
+Take a look at the file sizes in Table \@ref(tab:filesizes).
 Wow, that's quite a difference! Notice that for such a simple plot with few
 graphical elements (points), the vector graphics format (SVG) is over 100 times
 smaller than the uncompressed raster images (BMP, TIFF). Also, note that the
