fixing broken refs in viz

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -639,13 +639,13 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   scale_y_log10(labels = comma)
 ```
 
-Figure \@ref(03-mother-tongue-vs-most-at-home-scale-props) is the appropriate
+Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props) is the appropriate
 visualization to use to answer the first question in this section, i.e.,
 whether there is a relationship between the percentage of people who speak 
 a language as their mother tongue and the percentage for whom that
 is the primary language spoken at home.
 To fully answer the question, we need to use
- Figure \@ref(03-mother-tongue-vs-most-at-home-scale-props)
+ Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props)
 to assess a few key characteristics of the data: 
 
 - **Direction:** if the y variable tends to increase when the x variable increases, then y has a **positive** relationship with x. If 
