fixing more broken fig refs

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1028,7 +1028,7 @@ morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
 morley_hist
 ```
 
-Alright great, Figure \@ref(03-data-morley-hist-3) looks...wait a second! The
+Alright great, Figure \@ref(fig:03-data-morley-hist-3) looks...wait a second! The
 histogram is still all the same color! What is going on here? Well, if you 
 recall from Chapter \@ref(wrangling), the *data type* you use for each variable
 can influence how R and `tidyverse` treats it. Here, we indeed have an issue
