setting shape in canlang viz

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -727,7 +727,7 @@ visual redundancy&mdash;i.e., conveying the same information with both scatter p
 further improve the clarity and accessibility of your visualization.
 
 ```{r scatter-color-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors"}
-ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
+ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category, shape = category)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
        y = "Mother tongue \n (percentage of Canadian residents)") +
